@@ -4,6 +4,8 @@ Changes to Version 2.1-0
 
   o Added effect-plots dialog (was invoked directly from Model > Graphs menu).
 
+  o Check for functioning Java on 64-bit Windows to load import-from-Excel menu item (issue reported by Kosar Karimi-Pour).
+
 Changes to Version 2.0-5
 
   o New Basque translation (courtesy of Jose Ramon Rueda).
